// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P component correct styles: type=h1 1`] = `
<div>
  <p
    class="sc-bczRLJ Gujvk"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=h2 1`] = `
<div>
  <p
    class="sc-bczRLJ eJTLmz"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=small1 1`] = `
<div>
  <p
    class="sc-bczRLJ fUulwP"
  >
    hello
  </p>
</div>
`;

exports[`P component correct styles: type=small2 1`] = `
<div>
  <p
    class="sc-bczRLJ bpdgdH"
  >
    hello
  </p>
</div>
`;
